--- a/package.json
+++ b/package.json
@@ -100,8 +100,10 @@
     "@types/wicg-file-system-access": "^2020.9.1",
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "clone-deep": "^4.0.1",
+    "electron-context-menu": "^2.4.0",
     "electron-squirrel-startup": "^1.0.0",
     "hast-util-to-html": "^7.1.2",
+    "immer": "^8.0.1",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
     "mdast-util-compact": "^3.0.0",
