--- a/package.json
+++ b/package.json
@@ -102,13 +102,18 @@
     "clone-deep": "^4.0.1",
     "electron-context-menu": "^2.4.0",
     "electron-squirrel-startup": "^1.0.0",
+    "hast-util-from-string": "^1.0.4",
     "hast-util-to-html": "^7.1.2",
+    "hast-util-to-mdast": "^7.1.3",
     "immer": "^8.0.1",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
+    "mdast-builder": "^1.1.1",
     "mdast-util-compact": "^3.0.0",
     "mdast-util-from-markdown": "^0.8.4",
+    "mdast-util-gfm": "^0.1.1",
     "mdast-util-to-markdown": "^0.6.2",
+    "rehype-parse": "^7.0.1",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
     "remark-parse": "^9.0.0",
