update url & email address

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [],
   "author": {
     "name": "chee",
-    "email": "chee@snoot.club"
+    "email": "yay@chee.party"
   },
   "license": "MIT",
   "config": {
